Notes: Fixed note dialog on mobiles

--- a/style/_layout.scss
+++ b/style/_layout.scss
@@ -139,6 +139,7 @@ html {
 
 .goui.gap {
 	gap: util.dp(8);
+	row-gap: util.dp(12);
 }
 
 .goui.wrap {
